# E2

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  index.html
code/: CMakeLists.txt
code/ai/: CMakeLists.txt
code/ai/src/: action_controller.cpp  action_controller_human.cpp  action_regulator.cpp  agent.cpp  agent_config.cpp  agent_kind.cpp  agent_state_variables.cpp  agent_system_state.cpp  agent_system_variables.cpp  agents.cpp  blackboard.cpp  blackboard_agent.cpp  blackboard_device.cpp  cortex.cpp  cortex_default.cpp  cortex_input_encoder_human.cpp  cortex_mock.cpp  cortex_mock_human.cpp  cortex_netlab.cpp  cortex_output_decoder_human.cpp  cortex_random.cpp  cortex_robot.cpp  cortex_robot_humanoid.cpp  device.cpp  device_kind.cpp  devices.cpp  motion_desire_props.cpp  navigation.cpp  property_map.cpp  scene_binding.cpp  sensor.cpp  sensor_action.cpp  sensor_action_default_processor.cpp  sensor_event_utils.cpp  sensor_kind.cpp  sensors.cpp  sensory_controller.cpp  sensory_controller_collision_contacts.cpp  sensory_controller_human.cpp  sensory_controller_ray_cast_sight.cpp  (+7 more)
code/aiold/: CMakeLists.txt
code/aiold/src/: action_controller.cpp  agent.cpp  agent_kind.cpp  agents.cpp  blackboard.cpp  blackboard_agent.cpp  blackboard_device.cpp  cortex.cpp  cortex_mock.cpp  cortex_random.cpp  cortex_robot.cpp  device.cpp  device_kind.cpp  devices.cpp  motion_desire_props.cpp  property_map.cpp  sensor.cpp  sensor_action.cpp  sensor_action_default_processor.cpp  sensor_kind.cpp  sensors.cpp  sensory_controller.cpp  sensory_controller_collision_contacts.cpp  sensory_controller_ray_cast_sight.cpp  sensory_controller_sight.cpp  simulator.cpp  skeletal_motion_templates.cpp  skeleton_utils.cpp
code/angeo/: CMakeLists.txt
code/angeo/src/: axis_aligned_bounding_box.cpp  bouncing_coefficients.cpp  collide.cpp  collision_class.cpp  collision_material.cpp  collision_object.cpp  collision_scene.cpp  collision_shape_id.cpp  collision_system.cpp  coordinate_system.cpp  friction_coefficients.cpp  linear_segment_curve.cpp  mass_and_inertia_tensor.cpp  motion_constraint_system.cpp  rigid_body.cpp  rigid_body_simulator.cpp  shape.cpp  skeleton_kinematics.cpp  tensor_math.cpp  utility.cpp
code/cellab/: CMakeLists.txt
code/cellab/src/: bits_reference.cpp  cell_kinds.cpp  dump.cpp  dynamic_state_of_cell.cpp  dynamic_state_of_neural_tissue.cpp  dynamic_state_of_signalling.cpp  dynamic_state_of_synapse.cpp  homogenous_slice_of_tissue.cpp  neural_tissue.cpp  shift_in_coordinates.cpp  state_of_cell.cpp  static_state_of_cell.cpp  static_state_of_neural_tissue.cpp  static_state_of_signalling.cpp  static_state_of_synapse.cpp  territorial_state_of_synapse.cpp  transition_of_cells_of_tissue.cpp  transition_of_signalling_in_tissue.cpp  transition_of_spaialy_local_intercellular_signaling_in_tissue.cpp  transition_of_spaialy_local_intercellular_signalling_in_tissue.cpp  transition_of_synapses_of_tissue.cpp  transition_of_synapses_to_muscles.cpp  transition_of_synaptic_migration_between_lists.cpp  transition_of_synaptic_migration_in_tissue.cpp  transition_of_synaptic_migration_to_proper_lists.cpp  transition_of_territorial_lists_of_synapses.cpp  utilities_for_transition_algorithms.cpp
code/cellconnect/: CMakeLists.txt
code/cellconnect/src/: add_links_from_sensory_cells.cpp  add_links_to_synapses_to_muscles.cpp  basic_addition_of_synapses_to_territories_of_cells.cpp  check_for_network_properties.cpp  column_shift_function.cpp  compute_in_degrees.cpp  compute_link_terminal_coordinates.cpp  compute_out_degrees.cpp  dump.cpp  fill_coords_of_source_cells_of_synapses_in_tissue.cpp  fill_delimeters_between_territorial_lists.cpp  fill_delimiters_between_territorial_lists.cpp  fill_territories.cpp  incremental_addition_of_tissue_links.cpp  spread_synapses_into_distant_neighbourhoods.cpp  spread_synapses_into_local_neighbourhoods.cpp  spread_synapses_into_neighbourhoods.cpp
code/com/: CMakeLists.txt
code/com/src/: console.cpp  device_simulator.cpp  frame_of_reference.cpp  import_scene_props.cpp  object_guid.cpp  simulation_context.cpp  simulator.cpp
code/efloop/: CMakeLists.txt
code/efloop/src/: access_to_sensory_cells.cpp  access_to_synapses_to_muscles.cpp  external_feedback_loop.cpp
code/envlab/: CMakeLists.txt
code/envlab/src/: rules_and_logic_of_environment.cpp
code/experiments/: CMakeLists.txt  mkexperiment.py
code/experiments/netlab_cortex_functions/: CMakeLists.txt  exp_inhibitory_weight.cpp  exp_inhibitory_weight.hpp  exp_spiking_const_input_signal.cpp  exp_spiking_const_input_signal.hpp  exp_spiking_trains.cpp  exp_spiking_trains.hpp  exp_utils.cpp  exp_utils.hpp  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp  simulator_base.cpp  simulator_base.hpp
code/experiments/random_spikes_distribution_in_time_step/: CMakeLists.txt  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp
code/gfx/: CMakeLists.txt
code/gfx/src/: batch.cpp  batch_available_resources.cpp  batch_generator_arrow.cpp  batch_generator_basis_vectors.cpp  batch_generator_coord_cross.cpp  batch_generator_grid.cpp  (+26 more)
code/netexp/: CMakeLists.txt
code/netlab/: CMakeLists.txt
code/netview/: CMakeLists.txt
code/ode/: CMakeLists.txt
code/osi/: CMakeLists.txt
code/paralab/: CMakeLists.txt
code/plot/: CMakeLists.txt
code/pycellab/: .gitignore  CMakeLists.txt  accessors.cpp  accessors.hpp  config.py  data_classes.cpp  data_classes.hpp  datalgo.py  distribution.py  experiments.py  input_current.py  integrator.py  lookat.py  neuron.py  output_current.py  plot.py  pycellab-test-001-construction-of-static-state-of-neural-tissue.py  pycellab.cpp  pycellab.py  pycellabtest.py  pycellabutils.py  signalling.py  soma.py  spike_train.py  spiking.py  synapse.py  tests.py  utility.py
code/pyutils/: gen_terrain.py  gen_terrain_batch.py  plot.py
code/qtgl/: CMakeLists.txt
code/scene/: CMakeLists.txt
code/tests/: CMakeLists.txt  mktest.py  run_tests.py
code/tools/: CMakeLists.txt  mktool.py
code/utility/: CMakeLists.txt
(+1451 files in other folders)
